--- a/notebooks/fhir_terminology_server.ipynb
+++ b/notebooks/fhir_terminology_server.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,8 @@
     "    def __init__(self, url: str,\n",
     "                 user: Optional[str] = None,\n",
     "                 password: Optional[str] = None,\n",
-    "                 default_format: str = \"json\") -> None:\n",
+    "                 default_format: str = \"json\",\n",
+    "                 show_urls: bool = False) -> None:\n",
     "\n",
     "        self.url = url + ('' if url.endswith('/') or url.endswith('#') else '/')\n",
     "        self.format = default_format\n",
@@ -44,9 +45,10 @@
     "        self._password = password\n",
     "        self.metadata = self.get('metadata')\n",
     "        self.ok = self.metadata is not None\n",
+    "        self.show_urls = show_urls\n",
     "\n",
     "    @staticmethod\n",
-    "    def logon(url: str) -> Optional[\"FHIR\"]:\n",
+    "    def logon(url: str, show_urls: bool = False) -> Optional[\"FHIR\"]:\n",
     "        \"\"\" Prompt for a user and password and return a server \"\"\"\n",
     "        server = None\n",
     "        while server is None:\n",
@@ -55,7 +57,7 @@
     "                return None\n",
     "            else:\n",
     "                password = getpass.getpass(f\"Password: \")\n",
-    "            server = FHIR(url, user, password)\n",
+    "            server = FHIR(url, user, password, show_urls=show_urls)\n",
     "        return server\n",
     "\n",
     "    def __getitem__(self, item: str) -> \"FHIRReader\":\n",
@@ -70,6 +72,8 @@
     "\n",
     "    def get(self, relurl: Optional[str], params: Optional[Dict[str, str]] = None) -> Optional[JsonObj]:\n",
     "        url = self.url + relurl\n",
+    "        if self.show_urls:\n",
+    "            print(f\"GET {url}\")\n",
     "        resp = requests.get(url, params=params, auth=(self._user, self._password) if self._user else None)\n",
     "        if resp.ok:\n",
     "            return loads(resp.text)\n",
@@ -109,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -117,13 +121,14 @@
      "output_type": "stream",
      "text": [
       "User id: hsolbrig\n",
-      "Password: ········\n"
+      "Password: ········\n",
+      "GET https://fhir.loinc.org/metadata\n"
      ]
     }
    ],
    "source": [
     "default_url = 'https://fhir.loinc.org/'\n",
-    "server = FHIR.logon(default_url)\n",
+    "server = FHIR.logon(default_url, show_urls=True)\n",
     "\n",
     "if server is None:\n",
     "    sys.exit(1)"
@@ -138,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -155,9 +160,11 @@
       "\tValueSet: CDORU\n",
       "\n",
       "CodeSystems\n",
+      "GET https://fhir.loinc.org/CodeSystem\n",
       "\tLOINC: LOINC Code System - LOINC is a freely available international standard for tests, measurements, and observations \n",
       "\n",
       "ValueSets\n",
+      "GET https://fhir.loinc.org/ValueSet\n",
       "\tLL4136-9: Anticoagulant medications\n",
       "\tLL4137-7: Preoperative procedures\n",
       "\tLL415-1: MERS_TH_15_Eviron-safety event\n",
@@ -254,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -262,9 +269,27 @@
      "output_type": "stream",
      "text": [
       "Enter concept code: 4548-4\n",
+      "GET https://fhir.loinc.org/CodeSystem/$lookup\n",
       "4548-4: Hemoglobin A1c/Hemoglobin.total in Blood\n",
-      "Enter concept code: LP31755-9\n",
-      "LP31755-9: Microbiology\n",
+      "Enter concept code: 217042-1\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "https://fhir.loinc.org/CodeSystem/$lookup: Error: Not Found\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GET https://fhir.loinc.org/CodeSystem/$lookup\n",
+      "Code: 217042-1 not found\n",
+      "Enter concept code: 27042-1\n",
+      "GET https://fhir.loinc.org/CodeSystem/$lookup\n",
+      "27042-1: Methohexital [Mass/volume] in Serum or Plasma\n",
       "Enter concept code: \n"
      ]
     }
@@ -291,13 +316,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "GET https://r4.ontoserver.csiro.au/fhir/metadata\n",
       "Server Ontoserver, The Australian e-Health Research Centre, CSIRO at https://r4.ontoserver.csiro.au/fhir is based on Ontoserver®(6.0.0-SNAPSHOT)\n",
       "Resources:\n",
       "\tAccount: \n",
@@ -443,6 +469,7 @@
       "\tVisionPrescription: \n",
       "\n",
       "CodeSystems\n",
+      "GET https://r4.ontoserver.csiro.au/fhir/CodeSystem\n",
       "\tmedicationRequest Course of Therapy Codes: Medication request  course of  therapy  codes - MedicationRequest Course of Therapy Codes \n",
       "\tFHIRVersion: FHIRVersion - All published FHIR Versions. \n",
       "\tv2.0167: v2 SUBSTITUTION STATUS - FHIR Value set/code system definition for HL7 v2 table 0167 ( SUBSTITUTION STATUS) \n",
@@ -1497,7 +1524,8 @@
       "\tv2.0927: v2 Arm Stick - FHIR Value set/code system definition for HL7 v2 table 0927 ( Arm Stick) \n",
       "\tv2.0434: v2 Patient condition code - FHIR Value set/code system definition for HL7 v2 table 0434 ( Patient condition code) \n",
       "\n",
-      "ValueSets\n"
+      "ValueSets\n",
+      "GET https://r4.ontoserver.csiro.au/fhir/ValueSet\n"
      ]
     },
     {
@@ -2509,7 +2537,7 @@
     }
    ],
    "source": [
-    "server = FHIR(\"https://r4.ontoserver.csiro.au/fhir\")\n",
+    "server = FHIR(\"https://r4.ontoserver.csiro.au/fhir\", show_urls=True)\n",
     "print_metadata(server)\n"
    ]
   },
